@@ -1,6 +1,6 @@
 Package: cluster
 Version: 1.11.1
-Date: 2006-08-23
+Date: 2006-08-24
 Priority: recommended
 Author: Martin Maechler, based on S original by Peter Rousseeuw <rousse@uia.ua.ac.be>,
 	Anja.Struyf@uia.ua.ac.be and Mia.Hubert@uia.ua.ac.be,
