@@ -1,6 +1,6 @@
 
-R version 2.4.0 Under development (unstable) (2006-08-23 r38963)
-Copyright (C) 2006 The R Foundation for Statistical Computing
+R : Copyright 2005, The R Foundation for Statistical Computing
+Version 2.2.1  (2005-12-20 r36812)
 ISBN 3-900051-07-0
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
